# alexa_full_control

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .pylintrc  ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  AUDIT_ARCHITECTURE.md  AUDIT_ARCHITECTURE_PROFESSIONAL.md  AUDIT_QUALITY_FINAL.md  AUDIT_REPORT_FINAL.md  AmeliorationV1.md  AmeliorationV2.md  DOCUMENTATION_INDEX.md  ETAT_LISTES_ALEXA.md  FINAL_TEST_SUMMARY.md  INSTALLATION.md  LICENSE  Makefile  PHASE1_FINAL_STATUS.md  PHASE1_FINAL_VALIDATION.md  PHASE1_INTEGRATION_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_7_BRANCH_README.md  PHASE3_7_STATUS.md  PHASE_4_2_BATCH_1_COMPLETION.md  PHASE_4_2_BATCH_3_COMPLETION.md  PHASE_4_2_BATCH_4_COMPLETION.md  PHASE_4_IMPL_COMPLETION.md  PHASE_6_COMPLETION_SUMMARY.md  PROJECT_STATUS_FINAL.md  README.dev.md  README.md  REFACTORING_MASTER_PLAN.md  SESSION_COMPLETION_REPORT_2025_10_16.md  SESSION_SUMMARY_2025_10_16.md  SESSION_SUMMARY_2025_10_16_CONTINUED.md  STRUCTURE_CLEANUP_REPORT.md  TESTING_PLAN.md  (+24 more)
.github/workflows/: ci.yml  coverage.yml  lint.yml  python-ci.yml  test.yml
Dev/: fix_encoding.py  requirements-dev.txt
Dev/config/: .flake8  .vulture.toml  mypy.ini  project_config.py
Dev/docs/: ANALYSE_PYTHON_VS_SHELL.md  API_ENDPOINTS.md  APIs Amazon.md  AUDIT_AND_ACTION_PLAN.txt  AUDIT_FINDINGS_SUMMARY.md  AUDIT_PLAN_ACTION_V2.md  CACHE_FINAL_SUMMARY.md  CACHE_HTML_IMPROVEMENTS.md  CACHE_HTML_README.md  CHANGELOG_SHELL_PARITY.md  CLI_HELP_GUIDE.md  CLI_SCAN_REPORT.md  CODE_QUALITY_REPORT.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  EXPECTED_ARCHITECTURE.md  HELP_CONSTRUCTION_GUIDE.md  INDEX.md  INSTALLATION.html  LOGGING_SYSTEM.md  MUSIC_COMMANDS_COMPARISON.md  PHASE1_COMPLETION_REPORT.md  PHASE1_STATUS.md  PHASE2_BACKLOG.md  PHASE2_PLAN.md  PHASE3_6_IMPLEMENTATION_GUIDE.md  PHASE3_6_INTEGRATION_PLAN.md  PHASE3_6_SUMMARY.md  PHASE3_7_MANAGERS_REFACTOR.md  PHASE3_ENDPOINTS_SYNTHESIS.md  PHASE3_PROGRESS.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PROFESSIONAL_DEVELOPMENT.md  PR_DRAFT.md  PR_SUMMARY.md  README.md  REFACTORING_REPORT.md  Refacto_phase1.md  Refacto_phase2.md  Refacto_phase3.md  (+7 more)
Dev/pytests/: TDD_PHASE_4_REQUIREMENTS.py  conftest.py  test_base_manager_headers.py  test_csrf_manager.py  test_input_validators.py  test_integration.py
Dev/qualitytests/: run_quality_checks.ps1
Dev/scripts/: dev_tools.ps1  dev_tools.sh
Dev/tests/: pytest_install.py  run_scenario_tests.py  test_alarm_manager.py  test_cli.py  test_core.py  test_install.py  test_models.py  test_scenario_all.py  test_scenario_cli.py  test_services.py  test_utils.py
Install/: install.py
alexa_auth/: __init__.py  alexa_auth.py  alexa_cookie_retriever.py
alexa_auth/nodejs/: alexa-cookie-lib.js  auth-initial.js  auth-refresh.js  package-lock.json  package.json
cli/: __init__.py  alexa_cli.py  base_command.py  command_adapter.py  command_examples.py  command_parser.py  command_template.py  context.py  types.py
cli/commands/: __init__.py  activity.py  alarm.py  announcement.py  announcements_activity_reminder_commands.py  auth.py  base_subcommand.py  cache.py  calendar.py  device.py  device_communicate.py  device_manager.py  device_routine_alarm_commands.py  dnd.py  dnd_smarthome_calendar_multiroom_commands.py  favorite.py  lists.py  multiroom.py  music.py  music_library.py  music_playback.py  music_playback_commands.py  music_playback_manager.py  music_tunein.py  reminder.py  routine.py  scenario.py  smarthome.py  timers.py  timers_alarm.py  timers_auth_cache_commands.py  timers_countdown.py  timers_manager.py  timers_reminder.py
cli/help_texts/: activity_help.py  alarm_help.py  alexa_help.py  announcement_help.py  auth_help.py  cache_help.py  calendar_help.py  device_help.py  dnd_help.py  lists_help.py  multiroom_help.py  music_help.py  notification_help.py  reminder_help.py  routine_help.py  scenario_help.py  smarthome_help.py  timers_help.py
commands/: __init__.py
commands/activity/: __init__.py  command.py  manager.py
commands/alarms/: __init__.py  command.py  manager.py
commands/announcement/: __init__.py  command.py
commands/auth/: __init__.py  command.py
commands/base/: __init__.py  command.py  manager.py  (+1 more)
config/: PHASE1_COMPLETE.md  README.md  __init__.py  constants.py  paths.py  settings.py
core/: __init__.py  activity_manager.py  base_manager.py  base_persistence_manager.py  breaker_registry.py  circuit_breaker.py  config.py  device_manager.py  di_container.py  di_setup.py  dnd_manager.py  exceptions.py  manager_factory.py  notification_manager.py  state_machine.py  types.py
data/: __init__.py  device_family_mapping.py  name_id_mapper.py
docs/: ANALYSE_API_LISTES_SOLUTIONS.md  ANALYSE_ENDPOINTS_API.md  API_AMAZON_ALEXA_UTILISABLES.md  API_ENDPOINTS_INVENTORY.md  CACHE_DIAGRAMS_INCLUDES.md  CACHE_HTML_VERSION_FINALE.md  CACHE_SYSTEM.html  CACHE_SYSTEM.md  CALENDAR_API_INVESTIGATION.md  HELP_FORMATTING_GUIDE.md  INSTALLATION.html  INSTALL_UNINSTALL_README.md  MIGRATION.md  api_contracts.md  audit_report.md  design_alexa_api_service.md  documentation.html  endpoints_mapping.json  open_cache_docs.bat
models/: __init__.py  command.py
pytests/: test_short_help.py
scripts/: __init__.py  _debug_visualize.py  alexa_remote_control.sh  bulk_manager_refactor.py  bulk_refactor_plan.py  generate_cache_diagram.py  generate_cache_plantuml.py  generate_diagram_svgs.py  install.py  render_plantuml_local.py  test_logging.py  visualize_install_diagrams.py  visualize_install_diagrams_runner.py
services/: __init__.py  alexa_api_service.py  auth.py  cache_service.py  favorite_service.py  music_library.py  sync_service.py  voice_command_service.py
tests/: pytest_install.py
tools/: ast_check.py  dump_bytes.py  find_state_ma.py  fix_split.py  inspect_line.py  join_state_machine.py  print_lines.py
utils/: __init__.py  colorizer.py  device_index.py  help_formatter.py  help_generator.py  http_client.py  http_session.py  json_storage.py  lazy_loader.py  logger.py  name_id_mapper.py  network_discovery.py  short_help_formatter.py  smart_cache.py  term.py  text_utils.py
(+217 files in other folders)
